# etopay-sdk-quickstart-rs

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  scheduled.yml
examples/: offline_wallet.rs
src/: main.rs  utils.rs
tests/: test_sdk_dependency.rs
