[package]
name = "cawaena-sdk-quickstart-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cawaena-sdk = { git = "https://github.com/ETOSPHERES-Labs/cawaena-sdk", branch = "main", package ="sdk" }
tokio = { version = "1", features = ["sync"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15.0"