[package]
name = "etopay-sdk-quickstart-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
etopay-sdk = { git = "https://github.com/ETOSPHERES-Labs/etopay-sdk", branch = "main", package ="etopay-sdk" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
